{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 158,
  "lineage": "ecfd078f-d132-937a-f68a-3618847fa6be",
  "resources": [
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfa9ebe1d141defb",
            "arn": "arn:aws:ec2:ap-south-1:931337674770:elastic-ip/eipalloc-0bfa9ebe1d141defb",
            "domain": "vpc",
            "id": "eipalloc-0bfa9ebe1d141defb",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-201-211-225.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.211.225",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "mosip-boxes-nat-eip-1",
              "Project": "mosip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-boxes-nat-eip-1",
              "Project": "mosip"
            }
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ad21ae1d0696ad58",
            "arn": "arn:aws:ec2:ap-south-1:931337674770:instance/i-00928fec8e7b254d5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00928fec8e7b254d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "mosip-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0137818232518299e",
            "private_dns": "ip-10-0-1-65.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.65",
            "public_dns": "ec2-43-205-113-56.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.113.56",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f0ed6f0ba5c42133",
                "volume_size": 64,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d12cf6c8ad0833e5",
            "tags": {
              "Environment": "dev",
              "Name": "mosip-wg-testvpc",
              "Project": "mosip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-wg-testvpc",
              "Project": "mosip"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041c90f5daba43be5"
            ]
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_security_group.jumpserver",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:internet-gateway/igw-0efb2cbfa6ea7ab5c",
            "id": "igw-0efb2cbfa6ea7ab5c",
            "owner_id": "931337674770",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "mosip-boxes-igw",
              "Project": "mosip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-boxes-igw",
              "Project": "mosip"
            },
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfa9ebe1d141defb",
            "association_id": "eipassoc-099f1f069e939599a",
            "connectivity_type": "public",
            "id": "nat-0322575971595dda5",
            "network_interface_id": "eni-0754b99e14969e5bd",
            "private_ip": "10.0.1.13",
            "public_ip": "13.201.211.225",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d12cf6c8ad0833e5",
            "tags": {
              "Environment": "dev",
              "Name": "mosip-boxes-nat-gateway-1",
              "Project": "mosip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-boxes-nat-gateway-1",
              "Project": "mosip"
            }
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_eip.nat",
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:route-table/rtb-0befd846904b42db6",
            "id": "rtb-0befd846904b42db6",
            "owner_id": "931337674770",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0322575971595dda5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mosip-boxes-private-rt-1",
              "Project": "mosip",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-boxes-private-rt-1",
              "Project": "mosip",
              "Type": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_eip.nat",
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_nat_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:route-table/rtb-0eb55f811d89bc31a",
            "id": "rtb-0eb55f811d89bc31a",
            "owner_id": "931337674770",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0efb2cbfa6ea7ab5c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "mosip-boxes-public-rt",
              "Project": "mosip",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-boxes-public-rt",
              "Project": "mosip",
              "Type": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c4d93b657b61008",
            "region": "ap-south-1",
            "route_table_id": "rtb-0befd846904b42db6",
            "subnet_id": "subnet-0cb3018e6136c52ec"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_eip.nat",
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_nat_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_route_table.private",
            "module.base_infrastructure.module.aws_network.aws_subnet.private",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b402f6be2230f1f2",
            "region": "ap-south-1",
            "route_table_id": "rtb-0befd846904b42db6",
            "subnet_id": "subnet-0ef4971136b7c1faa"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_eip.nat",
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_nat_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_route_table.private",
            "module.base_infrastructure.module.aws_network.aws_subnet.private",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fbcc6f89fdb64ea",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eb55f811d89bc31a",
            "subnet_id": "subnet-0d12cf6c8ad0833e5"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_route_table.public",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0268f750325f16a07",
            "region": "ap-south-1",
            "route_table_id": "rtb-0eb55f811d89bc31a",
            "subnet_id": "subnet-0b8d2671904225d00"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_internet_gateway.main",
            "module.base_infrastructure.module.aws_network.aws_route_table.public",
            "module.base_infrastructure.module.aws_network.aws_subnet.public",
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jumpserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:security-group/sg-041c90f5daba43be5",
            "description": "Security group for jump server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041c90f5daba43be5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS web traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WireGuard VPN access",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              }
            ],
            "name": "mosip-wg-testvpc-sg",
            "name_prefix": "",
            "owner_id": "931337674770",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "mosip-wg-testvpc-sg",
              "Project": "mosip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-wg-testvpc-sg",
              "Project": "mosip"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:subnet/subnet-0cb3018e6136c52ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb3018e6136c52ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931337674770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "AZ": "ap-south-1a",
              "Environment": "dev",
              "Name": "mosip-boxes-private-subnet-1",
              "Project": "mosip",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Environment": "dev",
              "Name": "mosip-boxes-private-subnet-1",
              "Project": "mosip",
              "Type": "Private"
            },
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:subnet/subnet-0ef4971136b7c1faa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef4971136b7c1faa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "931337674770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "AZ": "ap-south-1b",
              "Environment": "dev",
              "Name": "mosip-boxes-private-subnet-2",
              "Project": "mosip",
              "Type": "Private"
            },
            "tags_all": {
              "AZ": "ap-south-1b",
              "Environment": "dev",
              "Name": "mosip-boxes-private-subnet-2",
              "Project": "mosip",
              "Type": "Private"
            },
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:subnet/subnet-0d12cf6c8ad0833e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d12cf6c8ad0833e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "931337674770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "AZ": "ap-south-1a",
              "Environment": "dev",
              "Name": "mosip-boxes-public-subnet-1",
              "Project": "mosip",
              "Type": "Public"
            },
            "tags_all": {
              "AZ": "ap-south-1a",
              "Environment": "dev",
              "Name": "mosip-boxes-public-subnet-1",
              "Project": "mosip",
              "Type": "Public"
            },
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:subnet/subnet-0b8d2671904225d00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d2671904225d00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "931337674770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "AZ": "ap-south-1b",
              "Environment": "dev",
              "Name": "mosip-boxes-public-subnet-2",
              "Project": "mosip",
              "Type": "Public"
            },
            "tags_all": {
              "AZ": "ap-south-1b",
              "Environment": "dev",
              "Name": "mosip-boxes-public-subnet-2",
              "Project": "mosip",
              "Type": "Public"
            },
            "vpc_id": "vpc-034f89e7c01cabf74"
          },
          "dependencies": [
            "module.base_infrastructure.module.aws_network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base_infrastructure.module.aws_network[0]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:931337674770:vpc/vpc-034f89e7c01cabf74",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0877991bec6481b29",
            "default_route_table_id": "rtb-020c02c5fb2fd4f86",
            "default_security_group_id": "sg-029ab3b6847b16008",
            "dhcp_options_id": "dopt-d617d0bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034f89e7c01cabf74",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020c02c5fb2fd4f86",
            "owner_id": "931337674770",
            "region": "ap-south-1",
            "tags": {
              "Environment": "dev",
              "Name": "mosip-boxes",
              "Project": "mosip"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "mosip-boxes",
              "Project": "mosip"
            }
          }
        }
      ]
    }
  ]
}